--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap');
 
+/*
+Julius Sans One:
+font-family: 'Julius Sans One', sans-serif;
+
+Archivo Narrow:
+font-family: 'Archivo Narrow', sans-serif;
+
+ */
 
 
 *{
