--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -45,3 +45,35 @@ font-family: 'Archivo Narrow', sans-serif;
      background-size: cover;
      background-position: center;
 }
+
+.header{
+    grid-column: 4 / 13;
+    grid-row: 1 / 4;
+    background: #090B0A;
+    color: #F6D88D;
+    font-size: 25px;
+    font-family: 'Julius Sans One', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote1 {
+    grid-column: 4 / 8;
+    grid-row: 17 / 18;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-size: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #090B0A;
+    color: #F6D88D;
+}
+
+.hunter-symbol {
+    grid-column: 10 / 13;
+    grid-row: 4 / 18;
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1612735956/Portfolio1/eed10c0c383a250a1acbee8b8c179727_x4xae9.jpg');
+    background-size: cover;
+    background-position: center;
+}
