--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -27,12 +27,13 @@ font-family: 'Archivo Narrow', sans-serif;
 
  .grid-container{
     display: grid;
+    width: 100%;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
     margin: 0 auto;
     grid-gap: 40px;
  }
-
+ 
  .item{
      border-radius: 10px;
      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
@@ -56,10 +57,11 @@ font-family: 'Archivo Narrow', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .quote1 {
-    grid-column: 4 / 8;
+    grid-column: 4 / 10;
     grid-row: 17 / 18;
     font-family: 'Archivo Narrow', sans-serif;
     font-size: 24px;
@@ -68,6 +70,7 @@ font-family: 'Archivo Narrow', sans-serif;
     justify-content: center;
     background: #090B0A;
     color: #F6D88D;
+    display: none;
 }
 
 .hunter-symbol {
