--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -31,7 +31,7 @@ font-family: 'Archivo Narrow', sans-serif;
     grid-template-columns: repeat(12, 1fr);
     grid-template-rows: auto;
     margin: 0 auto;
-    grid-gap: 40px;
+    grid-gap: 30px;
  }
  
  .item{
@@ -39,43 +39,72 @@ font-family: 'Archivo Narrow', sans-serif;
      box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.5);
  }
  
+ .header{
+     grid-column: 4 / 13;
+     grid-row: 1 / 4;
+     /* background: #090B0A; */
+     /* color: #F6D88D; */
+     font-size: 25px;
+     font-family: 'Julius Sans One', sans-serif;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+     padding: 20px;
+ }
+
+ .about {
+     grid-column: 4 / 8;
+     grid-row: 4 / 15;
+     /* background: #2DEAD2; */
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     margin: 0 auto;
+     font-family: 'Archivo Narrow', sans-serif;
+     font-size: 22px;
+     padding: 20px;
+}
+
+/* .ace {
+    grid-column: 4 / 10;
+    grid-row: 4 / 13;
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1612760730/Portfolio1/evan-cwiertny-screenshot017_abplgb.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+    display: none;
+} */
+
  .image{
      grid-column: 1 / 4;
-     grid-row: 1 / 18;
+     grid-row: 1 / 16;
      background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1612678387/Portfolio1/WaKLj21_czjkfw.jpg');
      background-size: cover;
      background-position: center;
-}
-
-.header{
-    grid-column: 4 / 13;
-    grid-row: 1 / 4;
-    background: #090B0A;
-    color: #F6D88D;
-    font-size: 25px;
-    font-family: 'Julius Sans One', sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.quote1 {
-    grid-column: 4 / 10;
-    grid-row: 17 / 18;
-    font-family: 'Archivo Narrow', sans-serif;
-    font-size: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #090B0A;
-    color: #F6D88D;
+     background-repeat: no-repeat;
+ 
 }
 
 .hunter-symbol {
-    grid-column: 10 / 13;
-    grid-row: 4 / 18;
-    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1612735956/Portfolio1/eed10c0c383a250a1acbee8b8c179727_x4xae9.jpg');
+    grid-column: 8 / 13;
+    grid-row: 4 / 20;
+    background: url('https://res.cloudinary.com/dvug8hy5k/image/upload/v1612736060/Portfolio1/8084839e56047d63cedd111b1f261c6b_cwvnql.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+
+}
+
+.quote1 {
+    grid-column: 4 / 8;
+    grid-row: 15 / 16;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-size: 22px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* background: #2DEAD2; */
+    padding: 20px;
 }
