--- a/src/Components/Hero.css
+++ b/src/Components/Hero.css
@@ -9,6 +9,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Narrow&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap');
 
 /*
 Julius Sans One:
@@ -16,6 +17,8 @@ font-family: 'Julius Sans One', sans-serif;
 
 Archivo Narrow:
 font-family: 'Archivo Narrow', sans-serif;
+
+font-family: 'Josefin Slab', serif;
 
  */
 
@@ -667,6 +670,7 @@ font-family: 'Archivo Narrow', sans-serif;
 
     .quote1 {
         grid-column: 4 / 13;
+        font-size: 20px;
     }
 
     .lore-title {
@@ -847,12 +851,12 @@ font-family: 'Archivo Narrow', sans-serif;
     }
 
     .grid-container {
-        grid-gap: 15px;
+        grid-gap: 10px;
     }
 
     .header {
         grid-column: 1 / 13;
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .image {
@@ -860,7 +864,7 @@ font-family: 'Archivo Narrow', sans-serif;
     }
 
     .about {
-        font-size: 18px;
+        font-size: 16px;
     }
 
     .hunter-symbol {
@@ -869,11 +873,12 @@ font-family: 'Archivo Narrow', sans-serif;
 
     .quote1 {
         grid-column: 4 / 13;
+        font-size: 18px;
     }
 
     .lore-title {
         grid-column: 1 / 13;
-        font-size: 20px;
+        font-size: 18px;
     }
 
     .deal {
@@ -884,7 +889,7 @@ font-family: 'Archivo Narrow', sans-serif;
     .dealEntry {
         grid-column: 1 / 9;
         grid-row: 20 / 25;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .call {
@@ -895,7 +900,7 @@ font-family: 'Archivo Narrow', sans-serif;
     .callEntry {
         grid-column: 5 / 13;
         grid-row: 25 / 30;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .firstStake {
@@ -906,7 +911,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .firstStakeEntry {
         grid-column: 5 / 13;
         grid-row: 30 / 35;
-        font-size: 18px;
+        font-size: 14px;
+    }
+
+    .firstStake h1 {
+        font-size: 60px;
     }
 
     .fold {
@@ -917,7 +926,7 @@ font-family: 'Archivo Narrow', sans-serif;
     .foldEntry {
         grid-column: 1 / 9;
         grid-row: 35 / 40;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .flop {
@@ -928,7 +937,7 @@ font-family: 'Archivo Narrow', sans-serif;
     .flopEntry {
         grid-column: 5 / 13;
         grid-row: 40 / 45;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .raise {
@@ -939,7 +948,7 @@ font-family: 'Archivo Narrow', sans-serif;
     .raiseEntry {
         grid-column: 5 / 13;
         grid-row: 45 / 50;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .turn {
@@ -950,7 +959,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .turnEntry {
         grid-column: 1 / 9;
         grid-row: 50 / 55;
-        font-size: 18px;
+        font-size: 14px;
+    }
+
+    .turn h1 {
+        font-size: 60px;
     }
 
     .all-in {
@@ -961,7 +974,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .all-inEntry {
         grid-column: 5 / 13;
         grid-row: 55 / 60;
-        font-size: 18px;
+        font-size: 14px;
+    }
+
+    .all-in h1 {
+        font-size: 60px;
     }
 
     .river {
@@ -972,7 +989,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .riverEntry {
         grid-column: 5 / 13;
         grid-row: 60 / 65;
-        font-size: 18px;
+        font-size: 14px;
+    }
+    
+    .river h1 {
+        font-size: 60px;
     }
 
     .showdown {
@@ -983,11 +1004,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .showdownEntry {
         grid-column: 1 / 8 ;
         grid-row: 65 / 70;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .showdown h1 {
-        font-size: 60px;
+        font-size: 48px;
         letter-spacing: 0;
     }
 
@@ -999,12 +1020,12 @@ font-family: 'Archivo Narrow', sans-serif;
     .winnerTakeAllEntry {
         grid-column: 5 / 13;
         grid-row: 70 / 75;
-        font-size: 18px;
+        font-size: 14px;
     }
 
     .winnerTakeAll h1 {
         letter-spacing: 0;
-        font-size: 60px;
+        font-size: 55px;
     }
 
     .bluff {
@@ -1015,7 +1036,11 @@ font-family: 'Archivo Narrow', sans-serif;
     .bluffEntry {
         grid-column: 5 / 13;
         grid-row: 75 / 80;
-        font-size: 18px;
+        font-size: 14px;
+    }
+
+    .bluff h1 {
+        font-size: 55px;
     }
 
     .badBeat {
@@ -1025,7 +1050,8 @@ font-family: 'Archivo Narrow', sans-serif;
 
     .badBeatEntry {
         grid-column: 1 / 8;
-        grid-row: 80 / 85
+        grid-row: 80 / 85;
+        font-size: 14px;
     }
 
     .aceInTheHole {
@@ -1033,7 +1059,309 @@ font-family: 'Archivo Narrow', sans-serif;
     }
 
     .aceInTheHole h1 {
-        font-size: 35px;
-        letter-spacing: 5px;
+        font-size: 30px;
+        letter-spacing: 2.5px;
     }
+}
+
+@media only screen and (max-width: 500px){
+    
+    .App {
+        background-color: #32a852;
+    }
+
+    .hero-container {
+        padding: 10px;
+    }
+
+    .grid-container {
+        grid-gap: 10px;
+    }
+
+    .header {
+        grid-column: 1 / 13;
+        grid-row: 1 / 3;
+        font-size: 18px;
+    }
+
+    .image {
+        grid-column: 1 / 13;
+        grid-row: 3 / 20;
+        height: 400px;
+        background-position-y: 20%;
+    }
+
+    .about {
+        grid-column: 1 / 13;
+        grid-row: 20 / 25;
+        font-size: 14px;
+        /* display: none; */
+    }
+
+    .hunter-symbol {
+        display: none;
+    }
+
+    .quote1 {
+        grid-column: 1 / 13;
+        grid-row: 25 / 27;
+        font-size: 16px;
+    }
+
+    .lore-title {
+        grid-column: 1 / 13;
+        grid-row: 27 / 30;
+        font-size: 18px;
+        /* display: none; */
+
+    }
+
+    .deal {
+        grid-column: 1 / 13;
+        grid-row: 30 / 35;
+        height: 175px;
+        /* display: none; */
+
+    }
+
+    .dealEntry {
+        grid-column: 1 / 13;
+        grid-row: 35 / 40;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .call {
+        grid-column: 1 / 13;
+        grid-row: 40 / 45;
+        height: 175px;
+        /* display: none; */
+
+    }
+
+    .callEntry {
+        grid-column: 1/ 13;
+        grid-row: 45 / 50;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .firstStake {
+        grid-column: 1 / 13;
+        grid-row: 50 / 55;
+        height: 175px;
+        /* display: none; */
+    }
+
+    .firstStakeEntry {
+        grid-column: 1 / 13;
+        grid-row: 55 / 60;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .firstStake h1 {
+        font-size: 60px;
+        /* display: none; */
+    }
+
+    .fold {
+        grid-column: 1 / 13;
+        grid-row: 60 / 65;
+        height: 175px;
+        /* display: none; */
+    }
+
+    .foldEntry {
+        grid-column: 1 / 13;
+        grid-row: 65 / 70;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .flop {
+        grid-column: 1 / 13;
+        grid-row: 70 / 75;
+        height: 175px;
+
+        /* display: none; */
+
+    }
+
+    .flopEntry {
+        grid-column: 1 / 13;
+        grid-row: 75 / 80;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .raise {
+        grid-column: 1 / 13;
+        grid-row: 80 / 85;
+        height: 175px;
+
+        /* display: none; */
+
+    }
+
+    .raiseEntry {
+        grid-column: 1 / 13;
+        grid-row: 85 / 90;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .turn {
+        grid-column: 1 / 13;
+        grid-row: 90 / 95;
+        height: 175px;
+
+        /* display: none; */
+
+    }
+
+    .turnEntry {
+        grid-column: 1 / 13;
+        grid-row: 95 / 100;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .turn h1 {
+        font-size: 60px;
+    }
+
+    .all-in {
+        grid-column: 1 / 13;
+        grid-row: 100 / 105;
+        height: 175px;
+
+        /* display: none; */
+
+    }
+
+    .all-inEntry {
+        grid-column: 1 / 13;
+        grid-row: 105 / 110;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .all-in h1 {
+        font-size: 60px;
+    }
+
+    .river {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 110 / 115;
+        height: 175px;
+
+    }
+
+    .riverEntry {
+        grid-column: 1 / 13;
+        grid-row: 115 / 120;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+    
+    .river h1 {
+        font-size: 60px;
+    }
+
+    .showdown {
+        grid-column: 1 / 13;
+        grid-row: 120 / 125;
+        height: 175px;
+        /* display: none; */
+    }
+
+    .showdownEntry {
+        grid-column: 1 / 13 ;
+        grid-row: 125 / 130;
+        font-size: 14px;
+        /* display: none; */
+
+    }
+
+    .showdown h1 {
+        font-size: 48px;
+        letter-spacing: 0;
+    }
+
+    .winnerTakeAll {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 130 / 135;
+        height: 175px;
+
+    }
+
+    .winnerTakeAllEntry {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 135 / 140;
+        font-size: 14px;
+    }
+
+    .winnerTakeAll h1 {
+        letter-spacing: 0;
+        font-size: 55px;
+    }
+
+    .bluff {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 140 / 145;
+        height: 175px;
+
+    }
+
+    .bluffEntry {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 145 / 150;
+        font-size: 14px;
+    }
+
+    .bluff h1 {
+        /* display: none; */
+        font-size: 55px;
+    }
+
+    .badBeat {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 150 / 155;
+        height: 175px;
+
+    }
+
+    .badBeatEntry {
+        /* display: none; */
+        grid-column: 1 / 13;
+        grid-row: 155 / 160;
+        font-size: 14px;
+    }
+
+    .aceInTheHole {
+        /* display: none; */
+        grid-row: 160 / 165;
+    }
+
+    .aceInTheHole h1 {
+        font-size: 24px;
+        letter-spacing: 0px;
+    }
+
 }
